tests/reference/pass_global_stmts-global_scope4-2d4061d.stderr
syntax error: Statement or Declaration expected inside program, found Expression
 --> tests/global_scope4.f90:4:1
  |
4 | 3*x
  | ^^^ 
